<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>gov.faa.ait</groupId>
    <artifactId>apra</artifactId>
    <packaging>war</packaging>
    <version>1.2.${revision}</version>
    <name>apra</name>

      <repositories>
        <repository>
          <snapshots>
            <enabled>false</enabled>
          </snapshots>
          <id>central</id>
          <name>libs-release</name>
          <url>http://artifactory.faa.gov:8081/artifactory/libs-release</url>
        </repository>
        <repository>
          <snapshots />
          <id>snapshots</id>
          <name>libs-snapshot</name>
          <url>http://artifactory.faa.gov:8081/artifactory/libs-snapshot</url>
        </repository>
        <repository>
          <snapshots/>
          <id>faa-apra</id>
          <name>faa-apra</name>
          <url>http://artifactory.faa.gov:8081/artifactory/faa-apra</url>
        </repository>
      </repositories>


    <build>
        <finalName>apra</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <inherited>true</inherited>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
            	<groupId>org.glassfish.jersey.containers</groupId>
            	<artifactId>jersey-container-servlet</artifactId>
            	<version>2.25.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-moxy</artifactId>
        </dependency>
        <dependency>
        	<groupId>log4j</groupId>
        	<artifactId>log4j</artifactId>
        	<version>1.2.12</version>
        </dependency>
        <dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-core</artifactId>
        	<version>2.17.1</version>
        </dependency>
        <dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-slf4j-impl</artifactId>
        	<version>2.4.1</version>
        </dependency>
        <dependency>
        	<groupId>junit</groupId>
        	<artifactId>junit</artifactId>
        	<version>4.12</version>
        </dependency>
        <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
           <version>2.15.2</version>
         </dependency>
        <dependency>
        	<groupId>com.fasterxml.jackson.core</groupId>
        	<artifactId>jackson-core</artifactId>
        	<version>2.15.2</version>
        </dependency>
        <dependency>
        	<groupId>io.swagger</groupId>
        	<artifactId>swagger-jersey2-jaxrs</artifactId>
        	<version>1.5.0</version>
        </dependency>
        <dependency>
        	<groupId>org.apache.logging.log4j</groupId>
        	<artifactId>log4j-web</artifactId>
        	<version>2.4.1</version>
        </dependency>
        <dependency>
        	<groupId>gov.faa.ait</groupId>
        	<artifactId>apraresponse</artifactId>
        	<version>[1.0,2.0)</version>
        </dependency>
        <dependency>
        	<groupId>org.glassfish.jersey.containers</groupId>
        	<artifactId>jersey-container-servlet</artifactId>
        </dependency>
        <dependency>
        	<groupId>org.glassfish.jersey.core</groupId>
        	<artifactId>jersey-client</artifactId>
        	<version>2.25.1</version>
        </dependency>
        <dependency>
        	<groupId>javax.ws.rs</groupId>
        	<artifactId>javax.ws.rs-api</artifactId>
        	<version>2.0.1</version>
        </dependency>
    </dependencies>
    <properties>
        <jersey.version>2.25.1</jersey.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>0</revision>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
</project>
